# diffusers-burn

./: .gitignore  Cargo.toml  README.md  devenv.nix
.github/workflows/: validate.yml
examples/stable-diffusion/: Cargo.toml  main.rs
scripts/: generate_reference.py
src/: lib.rs  utils.rs
src/models/: attention.rs  controlnet.rs  embeddings.rs  mod.rs  resnet.rs  unet_2d.rs  unet_2d_blocks.rs  vae.rs
src/pipelines/: mod.rs  stable_diffusion.rs  stable_diffusion_xl.rs  weights.rs
src/schedulers/: ddim.rs  ddpm.rs  dpmsolver_multistep.rs  euler_ancestral_discrete.rs  euler_discrete.rs  heun_discrete.rs  integrate.rs  k_dpm_2_ancestral_discrete.rs  k_dpm_2_discrete.rs  lms_discrete.rs  mod.rs  pndm.rs
src/transformers/: clip.rs  clip_tokenizer.rs  mod.rs
